sort of fixed the encoding issue on sign. is a bit clunky on converting between byte[] still